# ytuwu

./: .gitignore  Cargo.toml  README.md  file-saving.md  task-handling.md
browse_info/: documentation.md
browse_info/js/: album.js  artist.js  playlist.js
channel-info/: command.sh  curl.sh  ids  structure.md
channel-info/album_normal/: curl.sh
channel-info/album_web_remix/: curl.sh
channel-info/artist_windows/: curl.sh
channel-info/channel_normal/: curl.sh
channel-info/channel_web_remix/: curl.sh  res
channel_browse/: Cargo.toml
channel_browse/src/: album.rs  channel.rs  main.rs
hallo/album-the-god-machine/: violent-shadows.m4a
itag-collection/: 1.sh
samples/: res-1  res-2
src/: error.rs  id_resolver.rs  lib.rs  main.rs  name_trimmer.rs  shared_traits.rs  test.rs
src/browse_model/: browse_response.rs  error_response.rs  full_response.rs  header.rs  mod.rs  playlist_renderer.rs  response_context.rs
src/downloader/: channel.rs  channel_test.rs  core.rs  downloaded.rs  downloader.rs  full.rs  media.rs  media_stream.rs  metadata.rs  mime_types.rs  mod.rs  music_releases.rs  playlist.rs  progress.rs  store.rs  task_handler.rs  tasks.rs  thumbnail.rs  util.rs
src/error/: core.rs  from.rs  helper.rs  mod.rs  response_data.rs  storage.rs
src/id_resolver/: browse_id.rs  channel_id.rs  channel_name_id.rs  channel_playlist_id.rs  collection.rs  id.rs  id_collection.rs  mod.rs  playlist_id.rs  short_id.rs  video_id.rs
src/models/: channel_browse.rs  channel_name_to_id.rs  constants.rs  dummy.rs  fast_browse.rs  itag.rs  mod.rs  player.rs  (+3 more)
(+99 files in other folders)
