[package]
name = "ytuwu"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
url = "2.5.8"
